[project]
name = "dsnumpy"
version = "0.1.0"
description = ""
authors = [
    { name = "MAK8405", email = "mahdiahmadi2005kf@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"  # Force Python 3.11 only (TensorFlow-compatible)
dependencies = [
    "numpy >=1.26.0,<2.2.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
